--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev  -p 8080",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pm2":"pm2"
   },
   "dependencies": {
     "axios": "^1.2.0",
